@@ -8,7 +8,7 @@
 <b>GXemul:</b></font>&nbsp;&nbsp;<font color="#000000" size="6"><b>Release notes</b>
 </font></td></tr></table></td></tr></table><p>
 
-<!--  $Id: RELEASE.html,v 1.3 2007-11-16 08:28:58 debug Exp $  -->
+<!--  $Id: RELEASE.html,v 1.4 2007-11-21 12:22:29 debug Exp $  -->
 
 
 <h2>Release notes for GXemul 0.5.0</h2>
@@ -52,6 +52,17 @@ and <a href="guestoses.html#netbsdcatsinstall">NetBSD/cats</a>.
   <li>There are now finally <tt>install</tt> and <tt>uninstall</tt>
 	makefile targets, which should simplify installation.
 </ul>
+
+
+<p><br>Super-short mini FAQ:
+
+<p><b>Q:</b> Why C++? Why the rewrite/redesign?
+<br><b>A:</b> I am more used to plain C, but I thought it would
+be interesting to try to use C++ for a realistically-sized project.
+Hello World is not realistically sized. I thought the emulator
+would be a good project to work on. A rewrite was needed anyway,
+since GXemul development had stagnated.
+
 
 <p><br>To build the emulator, run the <tt>configure</tt> script, and then run 
 <tt>make</tt>. This should work on most Unix-like systems, with few or no 
