@@ -10,7 +10,7 @@
 
 <!--
 
-$Id: index.html,v 1.281 2007-09-13 19:24:07 debug Exp $
+$Id: index.html,v 1.282 2007-11-21 12:22:29 debug Exp $
 
 Copyright (C) 2003-2007  Anders Gavare.  All rights reserved.
 
@@ -90,15 +90,6 @@ SUCH DAMAGE.
   <ul>
     <li><a href="experiments.html#hello">Hello world</a>
     <li><a href="experiments.html#expdevices">Experimental devices</a>
-  </ul>
-
-  <p>
-
-  <li><a href="configfiles.html">Configuration files</a>
-  <ul>
-    <li><a href="configfiles.html#intro">Introduction</a>
-    <li><a href="configfiles.html#config">Configuration file syntax</a>
-    <li><a href="configfiles.html#minimal">A minimal example</a>
   </ul>
 
   <p>
