@@ -10,7 +10,7 @@
 
 <!--
 
-$Id: networking.html,v 1.7 2007-06-23 16:59:35 debug Exp $
+$Id: networking.html,v 1.8 2007-11-21 12:22:29 debug Exp $
 
 Copyright (C) 2003-2007  Anders Gavare.  All rights reserved.
 
@@ -129,8 +129,11 @@ href="guestoses.html#netbsdpmaxinstall">NetBSD/pmax</a>.
 
 <p>The way to emulate a network of multiple emulated machines, whether 
 they are actually running on the same physical host, or on multiple hosts, 
-is to use <a href="configfiles.html">configuration files</a>, and the
+is to use <i>configuration files</i>, and the
 "direct-access" method of networking.
+
+<p>TODO: Add section on new config file format, when available.
+The old one was removed.
 
 <p>Although it <i>is</i> possible to have more than one machine per 
 configuration file, I strongly recommend against it. Please use one 
