@@ -10,7 +10,7 @@
 
 <!--
 
-$Id: technical.html,v 1.77 2007-06-23 16:59:35 debug Exp $
+$Id: technical.html,v 1.78 2007-11-21 12:22:29 debug Exp $
 
 Copyright (C) 2004-2007  Anders Gavare.  All rights reserved.
 
@@ -313,9 +313,7 @@ Each file called <tt>dev_*.c</tt> in the
 <a href="../src/devices/"><tt>src/devices/</tt></a> directory is
 responsible for one hardware device. These are used from
 <a href="../src/machines/"><tt>src/machines</tt></a><tt>/machine_*.c</tt>,
-when initializing which hardware a particular machine model will be using,
-or when adding devices to a machine using the <tt>device()</tt> command in
-<a href="configfiles.html">configuration files</a>.
+when initializing which hardware a particular machine model will be using.
 
 <p>(I'll be using the name "<tt>foo</tt>" as the name of the device in all
 these examples.  This is pseudo code, it might need some modification to
