@@ -1,6 +1,6 @@
-file_aout.c  a.out executable file support
-file_ecoff.c  ECOFF file support
-file_elf.c  ELF file support
-file_macho.c  Mach-O file support
-file_raw.c  Raw file support
-file_srec.c  SREC file support
+file_aout.cc  a.out executable file support
+file_ecoff.cc  ECOFF file support
+file_elf.cc  ELF file support
+file_macho.cc  Mach-O file support
+file_raw.cc  Raw file support
+file_srec.cc  SREC file support
