@@ -1,4 +1,4 @@
-$Id: HISTORY,v 1.1651 2007-11-19 11:12:43 debug Exp $
+$Id: HISTORY,v 1.1652 2007-11-21 12:22:29 debug Exp $
 
 Changelog for GXemul:
 ---------------------
@@ -3710,3 +3710,6 @@ Changelog for GXemul:
 		Converting most of src/cpus/.
 		Converting src/net/*.c and src/promemul/*.c to *.cc.
 20071119	Converting src/file/*.c to *.cc.
+20071120	Removing remaining references to the old config file stuff in
+		the documentaion.
+20071121	Converting src/useremul/*.c to *.cc.
